<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424141"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/one"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/two"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/edt1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_toEndOf="@+id/btn2"
        android:layout_toRightOf="@+id/btn2"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/three"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnplus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/edt1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnplus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/edt1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/four"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/five"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/six"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnminus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnminus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnplus"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/eight"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnmulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/multi"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btnminus"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/seven"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/nine"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnmulti"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/point"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/zero"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnrem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnpoint"
        app:layout_constraintTop_toBottomOf="@+id/btn8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnrem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/rem"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btndivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn9"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btndivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/divide"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnrem"
        app:layout_constraintTop_toBottomOf="@+id/btnmulti"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="105dp"
        android:layout_height="93dp"
        android:layout_margin="1dp"
        android:layout_marginBottom="50dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/delete"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnclr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpoint"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnclr"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_margin="1dp"
        android:layout_marginBottom="50dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/clear"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnequal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btndelete"
        app:layout_constraintTop_toBottomOf="@+id/btn0"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="175dp"
        android:layout_height="93dp"
        android:layout_margin="1dp"
        android:layout_marginBottom="50dp"
        android:width="100dp"
        android:height="100dp"
        android:background="#2196F3"
        android:text="@string/equal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnclr"
        app:layout_constraintTop_toBottomOf="@+id/btnrem"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="411dp"
        android:layout_height="53dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:gravity="bottom|end"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/output"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt2"
        tools:ignore="labelFor" />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:gravity="bottom|end"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/ot2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/edt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="labelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>